# newreleases

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.md  python.md  quickstart.md
docs/api/: client.md  config.md  index.md
newreleases/: __init__.py  __main__.py  client.py  config.py  consts.py  enums.py  errors.py  html.py  http.py  models.py  page.py  pages.py  schemas.py  utils.py
newreleases/commands/: __init__.py  cli.py  configuration.py  configure.py  project.py  projects.py  release.py  utils.py
