[tool.poetry]
name = "newreleases"
version = "0.0.1"
description = "Unofficial python client for https://newreleases.io"
authors = ["Viktor Kerkez <alefnula@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/alefnula/newreleases"
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.21"
tabulate = "^0.8.3"
html2text = "^2018.1"
marshmallow = "^2.19"

[tool.poetry.dev-dependencies]
poetry = "1.0.0a2"
black = "19.3b0"
flake8 = "^3.7"
pre-commit = "^1.15"
pydocstyle = "^3.0"
pytest = "^4.4"
pytest-cov = "^2.6"
recommonmark = "^0.5.0"
sphinx = "^2.0"
sphinx-rtd-theme = "^0.4.3"
mypy = "^0.701.0"
jupyter = "^1.0"

[tool.poetry.scripts]
newreleases = 'newreleases.__main__:cli'

[tool.black]
target-version = ["py37"]
safe = true
line-length = 79
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

